--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "cd web-app && npm run start",
     "build": "python3 build.py",
-    "build.logic": "python3 build.py --buisness_logic",
+    "build.logic": "python3 build.py --business_logic",
     "build.infrastructure": "python3 build.py --infrastructure",
     "deploy.bootstrap": "cd infrastructure && npm install && npm run bootstrap",
     "deploy": "cd infrastructure && npm run cdk deploy -- -c stack_name=\"${STACK_NAME:-}\" --all --require-approval never",
