--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,16 +1,10 @@
 {
-	"name": "AWS-CDK",
-	"image": "mcr.microsoft.com/devcontainers/base:ubuntu",
-	// Features to add to the dev container. More info: https://containers.dev/features.
+	"name": "AWS CDK",
+	"image": "mcr.microsoft.com/devcontainers/python:1-3.11-bullseye",
+	"remoteUser": "vscode",
 	"features": {
-		"ghcr.io/devcontainers/features/python:1": {
-			"version": "3.11"
-		},
 		"ghcr.io/devcontainers/features/aws-cli:1": {
 			"version": "latest"
-		},
-		"ghcr.io/devcontainers/features/node:1": {
-			"version": "20.0.0"
 		},
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {
 			"moby": true,
@@ -19,21 +13,16 @@
 			"dockerDashComposeVersion": "v1"
 		},
 		"ghcr.io/devcontainers-contrib/features/aws-cdk:2": {
-			"version": "2.92.0"
+			"version": "2.92"
 		}
 	},
-	// Configure tool-specific properties.
 	"customizations": {
-		// Configure properties specific to VS Code.
 		"vscode": {
-			// Add the IDs of extensions you want installed when the container is created.
 			"extensions": [
 				"ms-python.python",
 				"streetsidesoftware.code-spell-checker",
                 "amazonwebservices.aws-toolkit-vscode"
 			]
 		}
-	},
-	// Set `remoteUser` to `root` to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
-	"remoteUser": "vscode"
+	}
 }
