Updated README and PIPELINE to reflect Cloud9, and CodeCommit service deprecation

--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -20,7 +20,6 @@ PYTHON_VERSION: "3.8"
 DEV_MODE: true
 ENABLE_STREAMING_ANALYTICS: true
 STREAM_SHARD_COUNT: 1
-CODECOMMIT_REPO: ""
 RAW_EVENTS_PREFIX: ""
 PROCESSED_EVENTS_PREFIX: ""
 RAW_EVENTS_TABLE: ""
@@ -29,6 +28,9 @@ S3_BACKUP_MODE: false
 CLOUDWATCH_RETENTION_DAYS: 30
 API_STAGE_NAME: "live"
 EMAIL_ADDRESS: ""
+GITHUB_USERNAME: ""
+GITHUB_REPO_NAME: ""
+CONNECTION_ARN: ""
 accounts:
   - NAME: "QA"
     ACCOUNT: "<YOUR-ACCOUNT-NUMBER>"
