added configuration for metric stream shard count

--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -20,6 +20,7 @@ PYTHON_VERSION: "3.8"
 DEV_MODE: true
 ENABLE_STREAMING_ANALYTICS: true
 STREAM_SHARD_COUNT: 1
+METRIC_STREAM_SHARD_COUNT: 1
 RAW_EVENTS_PREFIX: ""
 PROCESSED_EVENTS_PREFIX: ""
 RAW_EVENTS_TABLE: ""
