updated event handler to aws-sdk-v3

--- a/business-logic/events-processing/package.json
+++ b/business-logic/events-processing/package.json
@@ -5,14 +5,18 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
+        "@aws-sdk/client-dynamodb": "^3.731.0",
+        "@aws-sdk/credential-providers": "^3.731.0",
+        "@aws-sdk/lib-dynamodb": "^3.731.0",
         "ajv": "*",
-        "aws-sdk": "*",
         "moment": "*",
         "node-cache": "*",
         "underscore": "*"
     },
     "devDependencies": {
-        "aws-sdk": "*",
+        "@aws-sdk/client-dynamodb": "^3.731.0",
+        "@aws-sdk/credential-providers": "^3.731.0",
+        "@aws-sdk/lib-dynamodb": "^3.731.0",
         "npm-run-all": "*"
     },
     "scripts": {
