admin lambda SDK v2->v3

--- a/business-logic/api/admin/package.json
+++ b/business-logic/api/admin/package.json
@@ -5,7 +5,9 @@
     "version": "0.0.1",
     "private": true,
     "dependencies": {
-        "aws-sdk": "*",
+        "@aws-sdk/client-dynamodb": "^3.731.0",
+        "@aws-sdk/credential-providers": "^3.731.0",
+        "@aws-sdk/lib-dynamodb": "^3.731.0",
         "aws-serverless-express": "*",
         "body-parser": "*",
         "cors": "*",
@@ -15,7 +17,9 @@
         "uuid": "*"
     },
     "devDependencies": {
-        "aws-sdk": "*",
+        "@aws-sdk/client-dynamodb": "^3.731.0",
+        "@aws-sdk/credential-providers": "^3.731.0",
+        "@aws-sdk/lib-dynamodb": "^3.731.0",
         "npm-run-all": "*"
     },
     "scripts": {
