--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "deploy.bootstrap": "cd infrastructure && npm install && npm run bootstrap",
     "deploy": "cd infrastructure && npm run cdk deploy -- -c stack_name=\"${STACK_NAME:-}\" --all --require-approval never",
     "destroy": "cd infrastructure && npm run cdk destroy -- -c stack_name=\"${STACK_NAME:-}\" --all"
+  },
+  "devDependencies": {
+    "esbuild": "^0.24.2"
   }
 }
