--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -90,16 +90,18 @@ extra:
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
-  - Upgrading:
-      - Changelog: upgrading/v2-to-v3-changes.md
-      - Upgrade Guide: upgrading/v2-migration.md
-      - (old-flink-remove): upgrading/flink-migration.md
-  - Component Deep Dive: component-deep-dive.md
-  - Further Tuning: further-tuning.md
   - References:
     - API Reference: references/api-reference.md
     - Schema Reference: references/schema-reference.md
     - Operational Dashboard Reference: references/ops-dashboard-reference.md
+    - File/Folder Reference: references/file-reference.md
+  - Upgrading:
+      - Changelog: upgrading/v2-to-v3-changes.md
+      - Upgrade Guide: upgrading/v2-migration.md
+      - (old-flink-remove): upgrading/flink-migration.md
+  - Troubleshooting: troubleshooting.md
+  - Component Deep Dive: component-deep-dive.md
+  - Further Tuning: further-tuning.md
   - Design Considerations: design-considerations.md
   - Roadmap: roadmap.md
   - Security: security.md
