update flink metric handler to aws sdk v3

--- a/business-logic/metric-handler/package.json
+++ b/business-logic/metric-handler/package.json
@@ -5,7 +5,8 @@
     "private": true,
     "main": "index.js",
     "dependencies": {
-        "aws-sdk": "*",
+        "@aws-sdk/client-cloudwatch": "^3.734.0",
+        "@aws-sdk/credential-providers": "^3.734.0",
         "moment": "*"
     },
     "devDependencies": {
