adding the new conf setting ENABLE_APACHE_ICEBERG_SUPPORT

--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -19,6 +19,7 @@ NODE_VERSION: "latest"
 PYTHON_VERSION: "3.8"
 DEV_MODE: true
 ENABLE_STREAMING_ANALYTICS: true
+ENABLE_APACHE_ICEBERG_SUPPORT: false
 STREAM_SHARD_COUNT: 1
 STREAM_PROVISIONED: false
 RAW_EVENTS_PREFIX: ""
