--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "build": "python3 build.py",
     "build.logic": "python3 build.py --business_logic",
     "build.infrastructure": "python3 build.py --infrastructure",
-    "deploy.bootstrap": "cd infrastructure && npm install && npm run bootstrap",
-    "deploy": "cd infrastructure && npm run cdk deploy -- -c stack_name=\"${STACK_NAME:-}\" --all --require-approval never",
-    "destroy": "cd infrastructure && npm run cdk destroy -- -c stack_name=\"${STACK_NAME:-}\" --all"
+    "deploy.bootstrap": "cd infrastructure/aws-cdk && npm install && npm run bootstrap",
+    "deploy": "cd infrastructure/aws-cdk && npm run cdk deploy -- -c stack_name=\"${STACK_NAME:-}\" --all --require-approval never",
+    "destroy": "cd infrastructure/aws-cdk && npm run cdk destroy -- -c stack_name=\"${STACK_NAME:-}\" --all"
   },
   "devDependencies": {
     "esbuild": "^0.24.2"
