--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
   "name": "project-root",
   "version": "0.0.1",
+  "config": {
+    "iac": "cdk"
+  },
   "scripts": {
     "build": "python3 build.py",
     "build.logic": "python3 build.py --business_logic",
     "build.infrastructure": "python3 build.py --infrastructure",
-    "deploy.bootstrap": "cd infrastructure/aws-cdk && npm install && npm run bootstrap",
-    "deploy": "cd infrastructure/aws-cdk && npm run cdk deploy -- -c stack_name=\"${STACK_NAME:-}\" --all --require-approval never",
-    "destroy": "cd infrastructure/aws-cdk && npm run cdk destroy -- -c stack_name=\"${STACK_NAME:-}\" --all"
+    "cdk:deploy.bootstrap": "cd infrastructure/aws-cdk && npm install && npm run bootstrap",
+    "cdk:deploy": "cd infrastructure/aws-cdk && npm run cdk deploy -- -c stack_name=\"${STACK_NAME:-}\" --all --require-approval never",
+    "cdk:destroy": "cd infrastructure/aws-cdk && npm run cdk destroy -- -c stack_name=\"${STACK_NAME:-}\" --all",
+    "tf:deploy.bootstrap": "echo 'Terraform Deploy Bootstrap'",
+    "tf:deploy": "echo 'Terraform Deploy'",
+    "tf:destroy": "echo 'Terraform Destroy'",
+    "deploy.bootstrap": "npm run $npm_package_config_iac:deploy.bootstrap",
+    "deploy": "npm run $npm_package_config_iac:deploy",
+    "destroy": "npm run $npm_package_config_iac:destroy"
   },
   "devDependencies": {
     "esbuild": "^0.24.2"
