added EVENTS_DATABASE flag and the name prop on data lake construct glue database

--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -18,12 +18,13 @@ CDK_VERSION: ""
 NODE_VERSION: "latest"
 PYTHON_VERSION: "3.8"
 DEV_MODE: true
-ENABLE_STREAMING_ANALYTICS: true
+ENABLE_STREAMING_ANALYTICS: false
 ENABLE_APACHE_ICEBERG_SUPPORT: false
 STREAM_SHARD_COUNT: 1
 STREAM_PROVISIONED: false
 RAW_EVENTS_PREFIX: ""
 PROCESSED_EVENTS_PREFIX: ""
+EVENTS_DATABASE: ""
 RAW_EVENTS_TABLE: ""
 GLUE_TMP_PREFIX: ""
 S3_BACKUP_MODE: false
