added terraform to dev desktop

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,8 @@
 		},
 		"ghcr.io/devcontainers/features/java:1": {
 			"installMaven":true
-		}
+		},
+		"ghcr.io/devcontainers/features/terraform:1": {}
 	},
 	"customizations": {
 		"vscode": {
