deployable workgroup and namespace

--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -18,6 +18,8 @@ CDK_VERSION: ""
 NODE_VERSION: "latest"
 PYTHON_VERSION: "3.8"
 DEV_MODE: true
+ENABLE_REDSHIFT: false
+REDSHIFT_DB_NAME: ""
 ENABLE_STREAMING_ANALYTICS: false
 ENABLE_APACHE_ICEBERG_SUPPORT: false
 STREAM_SHARD_COUNT: 1
