re-adding items removed due to merge conflicts

--- a/infrastructure/aws-cdk/config.yaml.TEMPLATE
+++ b/infrastructure/aws-cdk/config.yaml.TEMPLATE
@@ -18,7 +18,7 @@ CDK_VERSION: ""
 NODE_VERSION: "latest"
 PYTHON_VERSION: "3.8"
 DEV_MODE: true
-ENABLE_STREAMING_ANALYTICS: false
+STREAMING_MODE: "REAL_TIME_KDS"
 ENABLE_APACHE_ICEBERG_SUPPORT: false
 STREAM_SHARD_COUNT: 1
 METRIC_STREAM_SHARD_COUNT: 1
