Variable, bug, and config changes

--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -18,11 +18,11 @@ CDK_VERSION: ""
 NODE_VERSION: "latest"
 PYTHON_VERSION: "3.8"
 DEV_MODE: true
-ENABLE_STREAMING_ANALYTICS: false
+STREAMING_MODE: "BATCH_FIREHOSE"
 ENABLE_APACHE_ICEBERG_SUPPORT: false
+STREAM_PROVISIONED: false
 STREAM_SHARD_COUNT: 1
 METRIC_STREAM_SHARD_COUNT: 1
-STREAM_PROVISIONED: false
 RAW_EVENTS_PREFIX: ""
 PROCESSED_EVENTS_PREFIX: ""
 EVENTS_DATABASE: ""
@@ -32,13 +32,3 @@ S3_BACKUP_MODE: false
 CLOUDWATCH_RETENTION_DAYS: 30
 API_STAGE_NAME: "live"
 EMAIL_ADDRESS: ""
-GITHUB_USERNAME: ""
-GITHUB_REPO_NAME: ""
-CONNECTION_ARN: ""
-accounts:
-  - NAME: "QA"
-    ACCOUNT: "<YOUR-ACCOUNT-NUMBER>"
-    REGION: "<QA-ACCOUNT-REGION>"
-  - NAME: "PROD"
-    ACCOUNT: "<YOUR-ACCOUNT-NUMBER>"
-    REGION: "<PROD-ACCOUNT-REGION>"
