add missing config item

--- a/infrastructure/aws-cdk/config.yaml
+++ b/infrastructure/aws-cdk/config.yaml
@@ -21,6 +21,7 @@ DEV_MODE: true
 ENABLE_REDSHIFT: true
 REDSHIFT_DB_NAME: "events"
 ENABLE_STREAMING_ANALYTICS: true
+STREAMING_MODE: "REAL_TIME_KDS"
 ENABLE_APACHE_ICEBERG_SUPPORT: false
 STREAM_SHARD_COUNT: 1
 METRIC_STREAM_SHARD_COUNT: 1
