--- a/infrastructure/aws-cdk/config.yaml.TEMPLATE
+++ b/infrastructure/aws-cdk/config.yaml.TEMPLATE
@@ -13,22 +13,29 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 
-WORKLOAD_NAME: ""
 CDK_VERSION: ""
 NODE_VERSION: "latest"
 PYTHON_VERSION: "3.8"
+
+WORKLOAD_NAME: "game-analytics-pipeline"
 DEV_MODE: true
-STREAMING_MODE: "REAL_TIME_KDS"
+
+INGEST_MODE: "REAL_TIME_KDS"
+DATA_PLATFORM_MODE: "DATA_LAKE"
 ENABLE_APACHE_ICEBERG_SUPPORT: false
-STREAM_PROVISIONED: false
-STREAM_SHARD_COUNT: 1
-METRIC_STREAM_SHARD_COUNT: 1
-RAW_EVENTS_PREFIX: ""
-PROCESSED_EVENTS_PREFIX: ""
+
 EVENTS_DATABASE: ""
 RAW_EVENTS_TABLE: ""
-GLUE_TMP_PREFIX: ""
-S3_BACKUP_MODE: false
+RAW_EVENTS_PREFIX: ""
+PROCESSED_EVENTS_PREFIX: ""
+
+STREAM_PROVISIONED: false
+STREAM_SHARD_COUNT: 1
 CLOUDWATCH_RETENTION_DAYS: 30
 API_STAGE_NAME: "live"
 EMAIL_ADDRESS: ""
+
+
+
+GLUE_TMP_PREFIX: ""
+S3_BACKUP_MODE: false
