--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "project-root",
   "version": "0.0.1",
   "config": {
-    "iac": "tf"
+    "iac": "cdk"
   },
   "scripts": {
     "build": "python3 build.py",
@@ -20,5 +20,8 @@
   },
   "devDependencies": {
     "esbuild": "^0.24.2"
+  },
+  "dependencies": {
+    "@types/node": "^22.13.17"
   }
 }
