--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,10 @@ cdk.out
 *.vsix
 
 node_modules/
+infrastructure/aws-cdk/config.yaml
+business-logic/flink-event-processing/dependency-reduced-pom.xml
+business-logic/flink-event-processing/target/deploy.zip
+business-logic/flink-event-processing/target/pyflink-dependencies.jar
+business-logic/flink-event-processing/target/classes/original-pyflink-dependencies.jar
+business-logic/flink-event-processing/target/maven-archiver/pom.properties
+infrastructure/aws-cdk/cdk.context.json
