--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -20,7 +20,7 @@ PYTHON_VERSION: "3.8"
 WORKLOAD_NAME: "game-analytics-pipeline"
 DEV_MODE: true
 
-INGEST_MODE: "REAL_TIME_KDS"
+INGEST_MODE: "KINESIS_DATA_STREAMS"
 DATA_PLATFORM_MODE: "DATA_LAKE"
 ENABLE_APACHE_ICEBERG_SUPPORT: false
 
