revert default to cdk, add analytics mode to template

--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -21,6 +21,7 @@ WORKLOAD_NAME: "game-analytics-pipeline"
 DEV_MODE: true
 
 INGEST_MODE: "KINESIS_DATA_STREAMS"
+REAL_TIME_ANALYTICS: true
 DATA_PLATFORM_MODE: "DATA_LAKE"
 ENABLE_APACHE_ICEBERG_SUPPORT: false
 
