update config.yaml documentation to reflect changes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -93,6 +93,7 @@ nav:
   - References:
     - API Reference: references/api-reference.md
     - Schema Reference: references/schema-reference.md
+    - Config Reference: references/config-reference.md
     - Operational Dashboard Reference: references/ops-dashboard-reference.md
     - File/Folder Reference: references/file-reference.md
   - Upgrading:
