update docs to reflect policy output, update build script for terraform to remove extra output and to auto approve changes on deploy

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "cdk:deploy": "cd infrastructure/aws-cdk && npm run cdk deploy -- -c stack_name=\"${STACK_NAME:-}\" --all --require-approval never",
     "cdk:destroy": "cd infrastructure/aws-cdk && npm run cdk destroy -- -c stack_name=\"${STACK_NAME:-}\" --all",
     "tf:deploy.bootstrap": "cd infrastructure/terraform/src && terraform init && terraform validate && terraform plan",
-    "tf:deploy": "cd infrastructure/terraform/src && terraform apply && terraform output",
+    "tf:deploy": "cd infrastructure/terraform/src && terraform apply -auto-approve",
     "tf:destroy": "cd infrastructure/terraform/src && terraform destroy",
     "deploy.bootstrap": "npm run $npm_package_config_iac:deploy.bootstrap",
     "deploy": "npm run $npm_package_config_iac:deploy",
