--- a/infrastructure/config.yaml.TEMPLATE
+++ b/infrastructure/config.yaml.TEMPLATE
@@ -17,7 +17,7 @@ WORKLOAD_NAME: "game-analytics-pipeline"
 
 INGEST_MODE: "KINESIS_DATA_STREAMS"
 REAL_TIME_ANALYTICS: true
-DATA_PLATFORM_MODE: "DATA_LAKE"
+DATA_STACK: "DATA_LAKE"
 ENABLE_APACHE_ICEBERG_SUPPORT: false
 
 EVENTS_DATABASE: ""
